--- a/views/brackets/index.ejs
+++ b/views/brackets/index.ejs
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="split split-one">
                 <div class="round round-one current">
-                    <div class="round-details">Round 1<br /><span class="date">March 16</span></div>
+                    <div class="round-details">Round 1<br /><span class="date">January 1, 2022</span></div>
                     <ul class="matchup">
                         <li class="team team-top">Duke<span class="score">76</span></li>
                         <li class="team team-bottom">Virginia<span class="score">82</span></li>
@@ -32,34 +32,10 @@
                         <li class="team team-top">NC State<span class="score">74</span></li>
                         <li class="team team-bottom">Maryland<span class="score">92</span></li>
                     </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">Georgia Tech<span class="score">78</span></li>
-                        <li class="team team-bottom">Georgia<span class="score">80</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">Auburn<span class="score">64</span></li>
-                        <li class="team team-bottom">Florida<span class="score">63</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">Kentucky<span class="score">70</span></li>
-                        <li class="team team-bottom">Alabama<span class="score">59</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">Vanderbilt<span class="score">64</span></li>
-                        <li class="team team-bottom">Gonzaga<span class="score">68</span></li>
-                    </ul>
                 </div> <!-- END ROUND ONE -->
 
                 <div class="round round-two">
-                    <div class="round-details">Round 2<br /><span class="date">March 18</span></div>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
+                    <div class="round-details">Round 2<br /><span class="date">January 2, 2022</span></div>
                     <ul class="matchup">
                         <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
@@ -70,8 +46,8 @@
                     </ul>
                 </div> <!-- END ROUND TWO -->
 
-                <div class="round round-three">
-                    <div class="round-details">Round 3<br /><span class="date">March 22</span></div>
+                <!-- <div class="round round-three">
+                    <div class="round-details">Round 3<br /><span class="date">January 3, 2022</span></div>
                     <ul class="matchup">
                         <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
@@ -80,12 +56,12 @@
                         <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
                     </ul>
-                </div> <!-- END ROUND THREE -->
+                 </div> END ROUND THREE -->
             </div>
 
             <div class="champion">
                 <div class="semis-l">
-                    <div class="round-details">west semifinals <br /><span class="date">March 26-28</span></div>
+                    <div class="round-details">Semifinals <br /><span class="date">January 4, 2022</span></div>
                     <ul class="matchup championship">
                         <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
@@ -93,25 +69,25 @@
                 </div>
                 <div class="final">
                     <i class="fa fa-trophy"></i>
-                    <div class="round-details">championship <br /><span class="date">March 30 - Apr. 1</span></div>
+                    <div class="round-details">Championship <br /><span class="date">January 5, 2022</span></div>
                     <ul class="matchup championship">
                         <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
                     </ul>
                 </div>
                 <div class="semis-r">
-                    <div class="round-details">east semifinals <br /><span class="date">March 26-28</span></div>
                     <ul class="matchup championship">
                         <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
                     </ul>
+                    <div class="round-details">Semifinals <br /><span class="date">January 4, 2022</span></div>
                 </div>
             </div>
 
 
             <div class="split split-two">
-                <div class="round round-three">
-                    <div class="round-details">Round 3<br /><span class="date">March 22</span></div>
+                <!-- <div class="round round-three">
+                    <div class="round-details">Round 3<br /><span class="date">January 3, 2022</span></div>
                     <ul class="matchup">
                         <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
@@ -120,18 +96,10 @@
                         <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
                     </ul>
-                </div> <!-- END ROUND THREE -->
+                 </div> END ROUND THREE -->
 
                 <div class="round round-two">
-                    <div class="round-details">Round 2<br /><span class="date">March 18</span></div>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
+                    <div class="round-details">Round 2<br /><span class="date">January 2, 2022</span></div>
                     <ul class="matchup">
                         <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                         <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
@@ -142,7 +110,7 @@
                     </ul>
                 </div> <!-- END ROUND TWO -->
                 <div class="round round-one current">
-                    <div class="round-details">Round 1<br /><span class="date">March 16</span></div>
+                    <div class="round-details">Round 1<br /><span class="date">January 1, 2022</span></div>
                     <ul class="matchup">
                         <li class="team team-top">Minnesota<span class="score">62</span></li>
                         <li class="team team-bottom">Northwestern<span class="score">54</span></li>
@@ -158,22 +126,6 @@
                     <ul class="matchup">
                         <li class="team team-top">Purdue<span class="score">36</span></li>
                         <li class="team team-bottom">Boise State<span class="score">40</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">Penn State<span class="score">38</span></li>
-                        <li class="team team-bottom">Indiana<span class="score">44</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">Ohio State<span class="score">52</span></li>
-                        <li class="team team-bottom">VCU<span class="score">80</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">USC<span class="score">58</span></li>
-                        <li class="team team-bottom">Cal<span class="score">59</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">Virginia Tech<span class="score">74</span></li>
-                        <li class="team team-bottom">Dartmouth<span class="score">111</span></li>
                     </ul>
                 </div> <!-- END ROUND ONE -->
             </div>
