--- a/views/brackets/index.ejs
+++ b/views/brackets/index.ejs
@@ -12,6 +12,7 @@
 
 <body>
     <section id="bracket">
+        <div class="details">Round 1</div>
         <div class="container">
             <div class="split split-one">
                 <div class="round round-one current">
