updating css for login page

--- a/views/brackets/index.ejs
+++ b/views/brackets/index.ejs
@@ -26,14 +26,6 @@
                             <li class="team team-top">Wake Forest<span class="score">64</span></li>
                             <li class="team team-bottom">Clemson<span class="score">56</span></li>
                         </ul>
-                        <ul class="matchup">
-                            <li class="team team-top">North Carolina<span class="score">68</span></li>
-                            <li class="team team-bottom">Florida State<span class="score">54</span></li>
-                        </ul>
-                        <ul class="matchup">
-                            <li class="team team-top">NC State<span class="score">74</span></li>
-                            <li class="team team-bottom">Maryland<span class="score">92</span></li>
-                        </ul>
                     </div>
                 </div> <!-- END ROUND ONE -->
 
@@ -41,10 +33,6 @@
                     <div class="song-column">
                         <div class="round-details">Round 2<br /><span class="date">January 2, 2022</span></div>
                         <div class="song-column">
-                            <ul class="matchup">
-                                <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                                <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                            </ul>
                             <ul class="matchup">
                                 <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                                 <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
@@ -67,7 +55,7 @@
             </div>
 
             <div class="champion">
-                <div class="semis-l">
+                <!-- <div class="semis-l">
                     <div class="round-details">Semifinals <br /><span class="date">January 4, 2022</span></div>
                     <div class="song-column">
                         <ul class="matchup championship">
@@ -75,7 +63,7 @@
                             <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <div class="final">
                     <i class="fa fa-trophy"></i>
                     <div class="round-details">Championship <br /><span class="date">January 5, 2022</span></div>
@@ -86,7 +74,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="semis-r">
+                <!-- <div class="semis-r">
                     <div class="song-column">
                         <ul class="matchup championship">
                             <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
@@ -94,7 +82,7 @@
                         </ul>
                     </div>
                     <div class="round-details">Semifinals <br /><span class="date">January 4, 2022</span></div>
-                </div>
+                </div> -->
             </div>
 
 
@@ -118,10 +106,6 @@
                             <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
                             <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
                         </ul>
-                        <ul class="matchup">
-                            <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                            <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                        </ul>
                     </div>
                 </div> <!-- END ROUND TWO -->
                 <div class="round round-one current">
@@ -134,14 +118,6 @@
                         <ul class="matchup">
                             <li class="team team-top">Michigan<span class="score">68</span></li>
                             <li class="team team-bottom">Iowa<span class="score">66</span></li>
-                        </ul>
-                        <ul class="matchup">
-                            <li class="team team-top">Illinois<span class="score">64</span></li>
-                            <li class="team team-bottom">Wisconsin<span class="score">56</span></li>
-                        </ul>
-                        <ul class="matchup">
-                            <li class="team team-top">Purdue<span class="score">36</span></li>
-                            <li class="team team-bottom">Boise State<span class="score">40</span></li>
                         </ul>
                     </div>
                 </div> <!-- END ROUND ONE -->
