--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,15 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="../css-1/login.css">
     <link rel="stylesheet" href="../css-1/category.css">
 </head>
 
-<form action="/auth/login" method="POST">
-    <label for="auth-email">Email</label>
-    <input id="auth-email" type="email" name="email" required>
+<body>
+    <div class="login-container">
+        <h1>Login</h1>
+        <form action="/auth/login" method="POST">
+            <label for="auth-email">Email</label>
+            <input id="auth-email" type="email" name="email" required>
 
-    <label for="auth-password">Password</label>
-    <input id="auth-password" type="password" name="password" required>
+            <label for="auth-password">Password</label>
+            <input id="auth-password" type="password" name="password" required>
 
-    <input type="submit" value="Log In">
-</form>
+            <input type="submit" value="Log In">
+        </form>
+    </div>
+</body>
