--- a/public/css-1/login.css
+++ b/public/css-1/login.css
@@ -1,20 +1,18 @@
-body {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    background-color: #3a3a3a;
-  }
-
 .login-container {
-    width: 50%;
-    height: 70%;
+    width: 400px;
+    height: 500px;
     display: grid;
+    margin:  50px auto;
     justify-items: center;
     align-items: center;
     background-color: white;
-    border-radius: 7px;
+    border-radius: 10px;
     box-shadow: 0px 0px 5px 2px black;
+}
+
+.login-form {
+    align-self: flex-start;
+    display: grid;
+    justify-items: center;
+    align-items: center;
 }
