--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,7 +13,7 @@
 <body>
     <div class="login-container">
         <h1>Login</h1>
-        <form action="/auth/login" method="POST">
+        <form class="login-form" action="/auth/login" method="POST">
             <label for="auth-email">Email</label>
             <input id="auth-email" type="email" name="email" required>
 
