--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,15 +9,19 @@
     <link rel="stylesheet" href="../css-1/category.css">
 </head>
 
-<form action="/auth/signup" method="POST">
-    <label for="new-email">Email</label>
-    <input id="new-email" type="email" name="email" required>
+<body>
+    <div class="signup-container">
+        <form action="/auth/signup" method="POST">
+            <label for="new-email">Email</label>
+            <input id="new-email" type="email" name="email" required>
 
-    <label for="new-name">Name</label>
-    <input id="new-name" type="text" name="name" required>
+            <label for="new-name">Name</label>
+            <input id="new-name" type="text" name="name" required>
 
-    <label for="new-password">Password</label>
-    <input id="new-password" type="password" name="password" required>
+            <label for="new-password">Password</label>
+            <input id="new-password" type="password" name="password" required>
 
-    <input type="submit" value="Sign up">
-</form>
+            <input type="submit" value="Sign up">
+        </form>
+    </div>
+</body>
