--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="../css-1/signup.css">
     <link rel="stylesheet" href="../css-1/category.css">
 </head>
 
 <body>
     <div class="signup-container">
-        <form action="/auth/signup" method="POST">
+        <h1>Sign Up Today!</h1>
+        <form class="signup-form" action="/auth/signup" method="POST">
             <label for="new-email">Email</label>
             <input id="new-email" type="email" name="email" required>
 
