--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,9 @@
             <a class="navbar-item" href="/">
               Home
             </a>
+            <a class="navbar-item" href="/brackets">
+              Song Brackets
+            </a>
             <a class="navbar-item" href="/categories">
               Categories
             </a>
