--- a/views/brackets/index copy.ejs
+++ b/views/brackets/index copy.ejs
@@ -19,12 +19,24 @@
                     <div class="round-details">Round 1<br /><span class="date">January 1, 2022</span></div>
                     <div class="song-column">
                         <ul class="matchup">
-                            <li class="team team-top">Duke<span class="score">76</span></li>
-                            <li class="team team-bottom">Virginia<span class="score">82</span></li>
+                            <li class="team team-top">
+                                <%= categories[0].name; %>
+                                    <span class="score">76</span>
+                            </li>
+                            <li class="team team-bottom">
+                                <%= categories[1].name; %>
+                                    <span class="score">82</span>
+                            </li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top">Wake Forest<span class="score">64</span></li>
-                            <li class="team team-bottom">Clemson<span class="score">56</span></li>
+                            <li class="team team-top">
+                                <%= categories[2].name; %>
+                                    <span class="score">64</span>
+                            </li>
+                            <li class="team team-bottom">
+                                <%= categories[3].name; %>
+                                    <span class="score">56</span>
+                            </li>
                         </ul>
                     </div>
                 </div> <!-- END ROUND ONE -->
@@ -40,65 +52,21 @@
                         </div>
                     </div>
                 </div> <!-- END ROUND TWO -->
-
-                <!-- <div class="round round-three">
-                    <div class="round-details">Round 3<br /><span class="date">January 3, 2022</span></div>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
-                 </div> END ROUND THREE -->
             </div>
 
             <div class="champion">
-                <!-- <div class="semis-l">
-                    <div class="round-details">Semifinals <br /><span class="date">January 4, 2022</span></div>
-                    <div class="song-column">
-                        <ul class="matchup championship">
-                            <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
-                            <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
-                        </ul>
-                    </div>
-                </div> -->
                 <div class="final">
-                    <i class="fa fa-trophy"></i>
                     <div class="round-details">Championship <br /><span class="date">January 5, 2022</span></div>
                     <div class="song-column">
-                        <ul class="matchup championship">
+                        <ul class="matchup">
                             <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
                             <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
                         </ul>
                     </div>
                 </div>
-                <!-- <div class="semis-r">
-                    <div class="song-column">
-                        <ul class="matchup championship">
-                            <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
-                            <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
-                        </ul>
-                    </div>
-                    <div class="round-details">Semifinals <br /><span class="date">January 4, 2022</span></div>
-                </div> -->
             </div>
 
-
             <div class="split split-two">
-                <!-- <div class="round round-three">
-                    <div class="round-details">Round 3<br /><span class="date">January 3, 2022</span></div>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                        <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
-                    </ul>
-                 </div> END ROUND THREE -->
-
                 <div class="round round-two">
                     <div class="round-details">Round 2<br /><span class="date">January 2, 2022</span></div>
                     <div class="song-column">
@@ -108,6 +76,7 @@
                         </ul>
                     </div>
                 </div> <!-- END ROUND TWO -->
+
                 <div class="round round-one current">
                     <div class="round-details">Round 1<br /><span class="date">January 1, 2022</span></div>
                     <div class="song-column">
