--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -14,9 +14,8 @@
             <% let song=songs[i]; %>
                 <% song=song.toJSON() %>
                     <p>
-                        <%= song.name %>
+                        <%= song.title %>
                     </p>
-                    <a href="/songs/<%= song.abbv %>">View Song</a>
                     <hr>
                     <% } %>
 
