--- a/views/brackets/index.ejs
+++ b/views/brackets/index.ejs
@@ -13,7 +13,7 @@
 <body>
     <div class="tournament-container">
         <div class="tournament-headers">
-            <h3>Round of 16</h3>
+            <h3>Preliminary</h3>
             <h3>Quarter-Finals</h3>
             <h3>Semi-Finals</h3>
             <h3>Final</h3>
@@ -22,7 +22,9 @@
 
         <div class="tournament-brackets">
             <ul class="bracket bracket-1">
-                <li class="team-item">A2 <time>14:00</time> C2</li>
+                <li class="team-item">
+                    <%= songs[0].title %><time>14:00</time> C2
+                </li>
                 <li class="team-item">D1 <time>20:00</time> 3BEF</li>
                 <li class="team-item">B1 <time>17:00</time> 3ACD</li>
                 <li class="team-item">F1 <time>20:00</time> E2</li>
@@ -50,6 +52,7 @@
             </ul>
         </div>
     </div>
+    <script src="/server.js"></script>
 </body>
 
 </html>
